--- a/app/views/posts/home.html.erb
+++ b/app/views/posts/home.html.erb
@@ -75,8 +75,20 @@
 		<select id="grab_source_ulo" class="form-control">
 			<option value="ulo_housrent">租房信息</option>
 			<option value="ulo_housale">房屋买卖</option>
-			<option value="ulo_busitran">生意转让</option>
-			<option value="ulo_recruit">招聘求职</option>
+			<option value="ulo_busitran_restaurant">餐馆转让</option>
+			<option value="ulo_busitran_nails">甲店转让</option>
+			<option value="ulo_busitran_massage">按摩转让</option>
+			<option value="ulo_busitran_laudary">洗衣店转让</option>
+			<option value="ulo_busitran_else">其他转让</option>
+			<option value="ulo_recruit_restaurant">餐馆请人</option>
+			<option value="ulo_recruit_nails">甲店请人</option>
+			<option value="ulo_recruit_massage">按摩请人</option>
+			<option value="ulo_recruit_secretary">公司职员</option>
+			<option value="ulo_recruit_barber">发廊请人</option>
+			<option value="ulo_recruit_driver">司机请人</option>
+			<option value="ulo_recruit_clinic">诊所请人</option>
+			<option value="ulo_recruit_seek">找工作</option>
+			<option value="ulo_recruit_else">其他招聘</option>
 		</select>
 	</div>
 	<div class="form-group">
